--- a/src/Polly.Contrib.DuplicateRequestCollapser.Specs/Polly.Contrib.DuplicateRequestCollapser.Specs.csproj
+++ b/src/Polly.Contrib.DuplicateRequestCollapser.Specs/Polly.Contrib.DuplicateRequestCollapser.Specs.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;netcoreapp3.0;net461;net472</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp2.0;</TargetFrameworks>
+    <TargetFrameworks>net7.0;net472</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">net7.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
